add new apis and some other feilds in patients
